# redfire-gateway

./: .eslintrc.js  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE-GPL  README.md  README_TESTING.md  build-deb.sh  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration_help.md
.github/workflows/: ci.yml  release.yml
config/: interface_test_config.toml  redfire-gateway.toml
debian/: README.Debian  changelog  control  copyright  install  postinst  postrm  prerm  redfire-gateway.init  redfire-gateway.service  redfire-timing.service  rules
docs/: B2BUA_TESTING.md  INTERFACE_TESTING.md
examples/: README.md  basic-gateway.toml  clustering-gateway.toml  interface_testing_demo.rs  mobile-gateway.toml  production-gateway.toml
src/: config.rs  error.rs  index.ts  lib.rs  main.rs
src/alarms/: index.ts
src/cli/: index.ts
src/config/: index.ts
src/core/: gateway.rs  gateway.ts  mod.rs  protocol-translator.ts
src/interfaces/: freetdm.rs  freetdm.ts  mod.rs  tdmoe.rs  tdmoe.ts
src/protocols/: d-channel.ts  dtmf-handler.ts  dtmf.rs  feature-group.ts  mobile-interworking.ts  mod.rs  nfas-manager.ts  pri.rs  pri.ts  rtp.rs  rtp.ts  sigtran.rs  sigtran.ts  sip.rs  sip.ts  tr069.rs
src/services/: alarms.rs  auto-detection.ts  auto_detection.rs  b2bua.rs  cdr.rs  clustering.rs  debug.rs  interface_testing.rs  media_relay.rs  mod.rs  performance-monitor.ts  performance.rs  sip_router.rs  snmp.rs  test_automation.rs  testing.rs  timing.rs  transcoding.rs
src/snmp/: index.ts
src/testing/: bert.ts  loopback.ts  mod.rs
src/types/: index.ts
src/utils/: logger.rs  logger.ts  mod.rs
test-configs/: comprehensive-suite.json
